# snh

./: .gitignore  LICENSE  README.md  alembic.ini  conftest.py  main.py  pyproject.toml  snh.db
.github/: copilot-instructions.md
backend/: README.md  main.py  pyproject.toml
backend/data/: notifications.json  patients.json  prescriptions.json  setores.json  users.json
backend/tests/: conftest.py  test_auth.py  test_dietaoral.py  test_dietaparenteral.py  test_json_repository.py  test_notificacao_inapp.py  test_notification_repository.py  test_patient.py  test_patient_controller.py  test_prescription.py  test_prescription_controller.py  test_report_controller.py  test_strategies.py  test_user_controller.py
data/: notifications.json  patients.json  prescriptions.json  setores.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AdminUsers.tsx  Dashboard.tsx  DietHistory.tsx  DietPrescriptionForm.tsx  LoginScreen.tsx  NotificationCenter.tsx  PatientDetails.tsx  PatientForm.tsx  PatientList.tsx  ReportsScreen.tsx  ScreenPlaceholder.tsx  TouchDisplay.tsx
frontend/src/contexts/: AppContext.tsx
migrations/: env.py
migrations/versions/: 40cd47387689_criar_tabela_paciente.py  7563a0b5763f_colunas_auditoria.py
src/snh_project/: app.py  database.py  pac_routers.py
tests/: test_dietaenteral  test_dietaenteral.py  test_dietaoral  test_factory.py  test_factory_parenteral_mista.py  test_itemcardapio.py  test_notifier.py  test_patient.py  test_user.py
(+68 files in other folders)
