[project]
name = "snh-project"
version = "0.1.0"
description = ""
authors = [
    {name = "David J.",email = "david.vital@aluno.ufca.edu.br"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)"
]

[tool.poetry]
packages = [{include = "snh_project", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "fastapi-cli (>=0.0.20,<0.0.21)"
]

